<resources>

    <!--About -->
    <string name="app_name">Handmade Manager</string>
    <string name="app_version">Версия 0.0.1</string>
    <string name="app_libraries">Используемые библиотеки и материалы:</string>
    <string name="icons_library">Icons made by <a href='https://www.flaticon.com/authors/eucalyp' title='Eucalyp'>Eucalyp</a>, <a href='https://www.flaticon.com/authors/freepik' title='Freepik'>Freepik</a>, <a href='https://www.flaticon.com/authors/nhor-phai' title='Nhor Phai'>Nhor Phai</a>, <a href='https://www.flaticon.com/authors/dmitri13' title='dmitri13'>dmitri13</a> from <a href='https://www.flaticon.com/' title='Flaticon'>www.flaticon.com</a></string>

    <!--Menu -->
    <string name="menu_home">Изделия</string>
    <string name="menu_backup">Резервная копия</string>
    <string name="menu_configuration">Настройка учета</string>
    <string name="menu_settings">Настройки приложения</string>
    <string name="menu_about">О приложении</string>

    <!--Handmade object -->
    <string name="handmade_object_name_hint">Название изделия</string>
    <string name="handmade_object_description_hint">Описание изделия</string>
    <string name="handmade_object_save">Сохранить</string>
    <string name="handmade_object_pick_image">Выбрать изображение...</string>

    <!--Other messages -->
    <string name="need_read_storage_permission">Для выбора изображения необходимо разрешение на доступ к внутреннему носителю информации!</string>

</resources>