<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.juxlab.handmademanager.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_backup"
        android:name="ru.juxlab.handmademanager.ui.backup.BackupFragment"
        android:label="@string/menu_backup"
        tools:layout="@layout/fragment_backup" />

    <fragment
        android:id="@+id/nav_about"
        android:name="ru.juxlab.handmademanager.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
</navigation>